# python_banking_assigment

./: .pylintrc  LICENSE  README.md  accounts.json  main.py  pyproject.toml
src/: account.py  account_menu.py  account_service.py  account_store.py  authentication_menu.py  choice_loop.py  program.py
src/actions/: deposit_action.py  withdraw_action.py
src/exceptions/: insufficient_funds_exception.py
src/menus/: menu.py  menu_option.py
src/types/: account.py
