[tool.poetry]
name = "banking"
version = "0.1.0"
description = ""
authors = ["Mathijs van Dijk <ambvdijk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
